fix overlap issue

--- a/instagram_web/static/css/custom.css
+++ b/instagram_web/static/css/custom.css
@@ -14,7 +14,6 @@
     white-space: nowrap;
     vertical-align: middle;
     margin: 0 auto;
-    width: 25%;
     color: #6c757d;
     background-color: transparent;
     background-image: none;
